--- a/package.json
+++ b/package.json
@@ -1,27 +1,67 @@
 {
   "name": "estelam-platform",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "پلتفرم مدیریت فروشندگان مبتنی بر نقشه",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "wrangler": "wrangler",
+    "d1:create": "wrangler d1 create estelam-db",
+    "d1:migrate": "wrangler d1 execute estelam-db --file=./database/schema.sql",
+    "d1:backup": "wrangler d1 export estelam-db --output=backup.sql",
+    "kv:create": "wrangler kv:namespace create ESTELAM_KV",
+    "kv:create-preview": "wrangler kv:namespace create ESTELAM_KV --preview",
+    "deploy": "wrangler deploy",
+    "pages:deploy": "wrangler pages deploy .next"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "next": "^15.5.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "typescript": "^5.7.2",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "tailwindcss": "^3.4.17",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.5.6",
+    "mapbox-gl": "^3.1.2",
+    "supertokens-auth-react": "^0.50.0",
+    "supertokens-node": "^0.50.0",
+    "stream-chat": "^8.30.0",
+    "stream-chat-react": "^13.9.0",
+    "lucide-react": "^0.468.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-toast": "^1.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "@tailwindcss/postcss": "^0.0.1",
+    "@eslint/eslintrc": "^3.2.0",
+    "wrangler": "^3.0.0"
+  },
+  "keywords": [
+    "nextjs",
+    "typescript",
+    "mapbox",
+    "supertokens",
+    "stream-chat",
+    "cloudflare",
+    "d1",
+    "kv",
+    "seller-management",
+    "rating-system"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
