--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,8 +7,8 @@ name = "estelam-platform"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "estelam-db"
-database_id = "your-database-id"
+database_name = "estelam"
+database_id = "ddad3c70-28f1-470f-98fe-4a16f51951a8"
 
 [[kv_namespaces]]
 binding = "KV"
@@ -22,6 +22,7 @@ SUPERTOKENS_DASHBOARD_API_KEY = "your-dashboard-api-key"
 NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN = "your-mapbox-token"
 NEXT_PUBLIC_STREAM_API_KEY = "your-stream-api-key"
 STREAM_API_SECRET = "your-stream-api-secret"
+NEXT_PUBLIC_CHAT_WORKER_URL = "https://chat-worker.smnshzh.workers.dev"
 
 [build]
 command = "npm run build"
@@ -31,10 +32,10 @@ cwd = "."
 type = "ESModule"
 globs = ["**/*.js", "**/*.mjs"]
 
-[build.upload.rules]
+[[build.upload.rules]]
 type = "Text"
 globs = ["**/*.html", "**/*.css", "**/*.json"]
 
-[build.upload.rules]
+[[build.upload.rules]]
 type = "Data"
 globs = ["**/*.png", "**/*.jpg", "**/*.jpeg", "**/*.gif", "**/*.svg", "**/*.ico", "**/*.woff", "**/*.woff2", "**/*.ttf", "**/*.eot"]
